package edu.hitsz.prop;

public enum PropType {
    BLOOD,
    BULLET,
    BULLET_PLUS,
    BOMB,
    FREEZE
}
