@startuml
'https://plantuml.com/class-diagram

title Simple Factory Pattern

  abstract class BaseProp {
    + forward():void
    + {abstract} active():void
  }

  class BloodProp
  class BulletProp
  class BulletPlusProp
  class BombProp
  class FreezeProp

  BaseProp <|-- BloodProp
  BaseProp <|-- BulletProp
  BaseProp <|-- BulletPlusProp
  BaseProp <|-- BombProp
  BaseProp <|-- FreezeProp

  enum PropType {
    BLOOD
    BULLET
    BULLET_PLUS
    BOMB
    FREEZE
  }

  class PropFactory {
    + {static} createProp(type:PropType, locationX:int, locationY:int, speedX:int, speedY:int):BaseProp
  }

  PropFactory ..> BaseProp
  PropFactory ..> PropType
@enduml